--- a/index.html
+++ b/index.html
@@ -3,27 +3,23 @@
 <head>
 	<title>Smashing Magazine</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 	<nav id="topbar">
 		<ul>
-			<li><a href=""><img src=""></a></li>
+			<li><a href=""><img src="smash.jpeg" width="30px" height="30px"></a></li>
 			<li><a href="">Articles</a></li>
 			<li><a href="">Guides</a></li>
 			<li><a href="">Books</a></li>
 			<li><a href="">Events</a></li>
 			<li><a href="">Membership</a></li>
-			<li><a href="">More</a></li>
-             <li><input type="search" name="search"  id="search" placeholder="Search articles"></li>
+			<li><button>More <img src="cat.png" width="30px; height="30px"> </button></li>
+             <li><input type="search"  name="search"  id="search"  placeholder="Search articles">
+           <i class="fa fa-search"> </i> 
+           </li> 
 		</ul>
-		<div class="header-latest">
-	   
-	   	<h1>Dont Miss These Latest
-	  			<br>
-        Articles
-
-</h1>
-</div>
+	
 		
 	</nav>
 	
@@ -31,6 +27,7 @@
 		<div class="grid-container">
 
   <div class="item2">
+  	<img src="andy-clarke.jpg" width="70px" height="70px">
   	 <h2>Andrew Clarke</h2>
 		<span>wrote</span>
 		<p>Inspired Design Decisions<br> With Bradbury Thompson: <br>
@@ -39,6 +36,7 @@
 
 		</div>
    <div class="item3">
+   	<img src="wole-oyekanmi-200x200.jpeg" width="70px" height="70px">
    	<h2>Wole Oyekanmi</h2>
 		<span>wrote</span>
 		<p>Setting up An API using <br> Flask,Google's Cloud  <br>
@@ -46,6 +44,7 @@
   
 </div>
     <div class="item4">
+    	<img src="adam-silver-100px-opt.png" width="70px" height="70px">
     	<h2>Iris Ljesnjanin</h2>
 		<span>wrote</span>
 		<p>Community Resources,<br> Weekly Newsletter,And <br>
@@ -53,7 +52,8 @@
    
 </div>
     <div class="item5">
-     <h2>Adeneye David Abiodun</h2>
+    	<img src="adeneye-david-abiodun-200x200.jpg" width="70px" height="70px">
+     <h2>Adeneye Abiodun</h2>
 		<span>wrote</span>
 		<p>Mastering Props And<br> PropTypes In React: <br>
 		</p>
@@ -70,10 +70,10 @@
 		<br>
 		<br>
 		<span>by <a href="">Fredrick O'Bien</a></span>
-		<p>SEO is an ever-changing world. Blink and<br> 
-		youll miss the latest best practices, thought <br>
-		leaders, and tools. Feeling out of touch is<br>
-	 natural. This guide is your way back into <br>
+		<p>SEO is an ever-changing world. Blink and
+		youll miss the latest best practices, thought
+		leaders, and tools. Feeling out of touch is
+	 natural. This guide is your way back into 
 	the groove, baby.</p>
 		
 	</div>
@@ -100,11 +100,11 @@
 			<br>
 			 <br>
 			<span>by <a href="">Fredrick O'Bien</a></span>
-		<p>In this article, Artur Basak introduces a <br>
-		 modern approach on how to set up CSS <br>
-		  Custom Properties that respond to the <br>
-		   application colors. The idea of dividing <br>
-		   colors into three levels can be quite useful: a <br>
+		<p>In this article, Artur Basak introduces a 
+		 modern approach on how to set up CSS
+		  Custom Properties that respond to the 
+		   application colors. The idea of dividing 
+		   colors into three levels can be quite useful: a 
 		palette (or....)</p>
 	</div>
 	
@@ -116,8 +116,9 @@
 
 <div class="main2">
 <div class="members1">
+	<img src="smashmember.png" height="250px">
 	<h5>1,699 smashing  members</h5>
-	<br>
+	
 	<p> A friendly community, books, webinars,<br>
 	 conferences and networking-for just 1 coffee.
 Join the <br> family</p>
@@ -129,7 +130,7 @@ Join the <br> family</p>
 
 </div>
 <div class="members">
-	<a href="">Smashing Podcast Episode <br> 22 With Chris Coyier: What Is  <br>
+	<a href="">Smashing Podcast Episode 22 With Chris Coyier: What Is
 	Serverless?</a>
 	<p>We re talking about Serverless architectures.<br> 
 		What does that mean, and how does it differ <br>
@@ -160,7 +161,9 @@ to use it for a better, more efficient way of handling errors across your.......
 </div>
 </div>
  <div class="smashingTv">
- 	 <center><h6>New on Smashing Tv</h6></center>
+ 	<center>
+ 	<img src="smashtv.jpeg" width="250px">
+ 	 <h6>New on Smashing Tv</h6></center>
  	<center>
 	<p>A channel where seasoned  developers show how they design,build,work <br>
 		<br>
@@ -189,7 +192,13 @@ Without Shady Tricks <br></span>
  doubts effectively — without alienating people along the way. By Paul<br>
   Boag.</p>
 <button>jump to table of contents</button>
-<img src="">
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<img src="click.jpeg" width="510px" height="240px">
 </center>
  </div>
 
@@ -213,20 +222,23 @@ Without Shady Tricks <br></span>
 
  <div class="gridit">
  	<div class="practical">
+ 		<img src="matt-hobbs-100px-opt.png" width="70px" height="70px">
  		<span>Stephen Shaw wrote</span>
 	<h5>Art With Css Variables</h5>
 	
-	<p>August 20,2020 — CSS Variables are not only super<br> powerful but also a lot of fun, as Stephen Shaw’s <br>animated<a href="">interpretation of a painting </a>shows.</p>
+	<p>August 20,2020 — CSS Variables are not only super powerful but also a lot of fun, as Stephen Shaw’s animated<a href="">interpretation of a painting </a>shows.</p>
 </div>
 
 	<div class="data">
+		<img src="severino-ribecca-opt.png" width="70px" height="70px">
  		<span>Severino Ribecca wrote</span>
 	<h5>Data Visualisation Catalogue</h5>
 	
-	<p>August 20,2020 — CSS Variables are not only super<br> powerful but also a lot of fun, as Stephen Shaw’s <br>animated<a href="">interpretation of a painting </a>shows.</p>
+	<p>August 20,2020 — CSS Variables are not only super<br> powerful but also a lot of fun, as Stephen Shaw’s animated<a href="">interpretation of a painting </a>shows.</p>
 </div>
 
 	<div class="accordion">
+		<img src="stephen-shaw-100px-opt.png" width="70px" height="70px">
  		<span>Stephen Shaw wrote</span>
 	<h5>Accordion Rows In CSS Grid</h5>
 	
@@ -234,18 +246,35 @@ Without Shady Tricks <br></span>
 </div>
 
 <div class="forms">
+	<img src="adam-silver-100px-opt.png" width="70px" height="70px">
+ 		<span>Stephen Shaw wrote</span>
+	<h5>Simplyfying Forms</h5>
+	
+	<p>August 13, 2020 — Adam Silver shares a small but powerful tip to simplify forms: Split up double-barrelled questions into two. Two simple questions are always easier to answer than one difficult one.</p>
+</div>
+<div class="accordion">
+		<img src="stephen-shaw-100px-opt.png" width="70px" height="70px">
+ 		<span>Stephen Shaw wrote</span>
+	<h5>Accordion Rows In CSS Grid</h5>
+	
+	<p>August 14, 2020 — In the blog post “Accordion Rows in CSS Grid”, Eric Meyer explores the way he’s using CSS Grid rows on his recently redesigned website to give himself more layout flexibility..</p>
+</div>
+<div class="forms">
+	<img src="adam-silver-100px-opt.png" width="70px" height="70px">
  		<span>Stephen Shaw wrote</span>
 	<h5>Simplyfying Forms</h5>
 	
 	<p>August 13, 2020 — Adam Silver shares a small but powerful tip to simplify forms: Split up double-barrelled questions into two. Two simple questions are always easier to answer than one difficult one.</p>
 </div>
 
+
  </div>
  </div>
  <div class="links" >
   <center><a href="">MORE LINKS ON TWITTER</a></center>
  </div>
- <div class="smashingbox">
+ <div class="box">
+ 	<div class="smashingbox">
  	<h5>Featured Smashing Book</h5>
  	<span>Design Systems</span>
  	<p>Meet Design Systems, a recent Smashing book in which Alla Kholmatova explores how to <br> <br>
@@ -253,7 +282,12 @@ Without Shady Tricks <br></span>
 
  		design system to create great digital products. With common traps,<br> 
  		<br>gotchas and lessons learned.</p>
+
  	<button>Jump to table contents</button>
+ </div>
+ 	<div class="designimage">
+ 	<img src="design.png">
+ </div>
  	
  </div>
  <br>
@@ -369,8 +403,15 @@ Smashing is proudly running on Netlify.
 <br>
 
 Fonts by Latinotype.</p>
-<br>
-<br>
+</center>
+
+<div class="footerimg">
+	<div class="imgcage">
+	<img src="cage.jpeg" width="100px">
+</div>
+	
+	<div class="linkwrite">
+	
 <a href="">Write for us</a>
 <a href="">contact us</a>
 <a href=""> About Us(Impressum)</a>
@@ -380,6 +421,15 @@ Fonts by Latinotype.</p>
 <a href="">MembershipLogin</a>
 <a href="">Delivery Times</a>
 <a href="">Advertise</a>
+
+</div>
+<div class=pup>
+
+<img src="puppy.png" width="150px" >
+</div>
+</div>
+
+
 </center>
 </footer>
 </body>
