Edit index.html and style.css

--- a/index.html
+++ b/index.html
@@ -14,20 +14,30 @@
 			<li><a href="">Books</a></li>
 			<li><a href="">Events</a></li>
 			<li><a href="">Membership</a></li>
-			<li><button>More <img src="cat.png" width="30px; height="30px"> </button></li>
-             <li><input type="search"  name="search"  id="search"  placeholder="Search articles">
-           <i class="fa fa-search"> </i> 
+			<li><button id="navbtn">More <img src="cat.png" width="30px; height="30px"> </button></li>
+
+             <li> </i><input type="search"  name="search"  id="search"  placeholder="Search articles ...."> 
+            
            </li> 
+          	<i class="fa fa-search" aria-hidden="true"></i>
+
 		</ul>
 	
 		
 	</nav>
-	
+	<div class="headerlatest">
+		<div>
+		<h1>Dont Miss on </h1>
+	</div>
+	<div>
+		<h1>Latest Articles</h1>
+	</div>
+</div>
 
 		<div class="grid-container">
 
   <div class="item2">
-  	<img src="andy-clarke.jpg" width="70px" height="70px">
+  	<img src="andy-clarke.jpg" width="50px" height="50px">
   	 <h2>Andrew Clarke</h2>
 		<span>wrote</span>
 		<p>Inspired Design Decisions<br> With Bradbury Thompson: <br>
@@ -36,6 +46,11 @@
 
 		</div>
    <div class="item3">
+   	<div class="topitem3">
+   	<img src="circle.jpg" width="50px" height="50px">
+   	<button>Seriously red  </button>
+   </div>
+
    	<img src="wole-oyekanmi-200x200.jpeg" width="70px" height="70px">
    	<h2>Wole Oyekanmi</h2>
 		<span>wrote</span>
